Add Mock AI mode for testing without API limits